[gd_scene load_steps=5 format=3 uid="uid://1tpxgxcj3b54"]

[ext_resource type="Texture2D" uid="uid://cr8x7ewkar1d6" path="res://ArtAssets/Weapons/basic_arrow.png" id="1_5ot1x"]
[ext_resource type="Script" path="res://Scripts/Weapons/basic_arrow.gd" id="1_kn4te"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lvp81"]
size = Vector2(11, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rfhfp"]
size = Vector2(13, 3)

[node name="basic_arrow" type="Node2D"]
script = ExtResource("1_kn4te")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_5ot1x")

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_lvp81")

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Interact" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact"]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_rfhfp")
disabled = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
